--- a/css/styles.css
+++ b/css/styles.css
@@ -88,6 +88,17 @@ nav ul img {
     height: 2em;
 }
 
+/* .cart-profile::after{
+    content:'';
+    width: 26px;
+    height: 13px;
+    position: absolute;
+    background-color: hsl(26, 100%, 55%);
+    z-index: 5;
+    top: 15%;
+    border-radius: 1em;
+} */
+
 .prof {
     width: 2.5em;
     height: 2.5em;
@@ -105,6 +116,8 @@ nav ul img {
     display: flex;
     justify-content: center;
     position: absolute;
+    left: 10%;
+    right: 10%;
     z-index: 50;
     width: 100vw;
     display: none;
@@ -138,6 +151,10 @@ nav ul img {
     width: 4em;
     height: 4em;
     border-radius: 0.5em;
+}
+
+.item i:nth-child(3) {
+    font-size: 1.5em;
 }
 
 .checkout-btn {
@@ -252,14 +269,17 @@ section .description .low-desc {
 .signs {
     display: flex;
     justify-content: space-between;
+    align-items: center;
     max-width: 100vw;
     padding: 2em;
     font-size: 1.4em;
     font-weight: 700;
 }
 
-.orange {
+.symbols {
     color: hsl(26, 100%, 55%);
+    font-size: 1.4em;
+    cursor: pointer;
 }
 
 /* BUTTON */
@@ -382,13 +402,14 @@ button {
     }
 
     .cover-basket {
-        margin-top: -20em;
+        margin-top: -15em;
         justify-content: flex-end;
         padding-right: 6em;
+        left: 70%;
     }
 
     .basket {
-        width: 20vw;
+        width: 22.5vw;
     }
 
 
